# Batallas

./: .clang  .clangd  .gitignore  Battallas.sln  Battallas.vcxproj  Battallas.vcxproj.filters  Boton.cpp  CMakeLists.txt  Enemigo.cpp  Enemigo.h  Magias.cpp  Personaje.cpp  Personaje.hpp  main.cpp
include/: Boton.h  Enemigo.hpp  Magias.hpp  Personaje.hpp  Texture&Renderer.hpp  Window.hpp  bool.hpp  oo_sdl.hpp
release/: Batalla.out
src/: .main.cpp.swp  Boton.cpp  Enemigo.cpp  Personaje.cpp  main.cpp
